force-app/main/default/objects/Service_Request__c/fields/Country_Of_Origin__c.field-meta.xml
<CustomField>
    <fullName>Country_Of_Origin__c</fullName>
    <label>Country Of Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>