force-app/main/default/objects/Service_Request__c/fields/Make_Name__c.field-meta.xml
<CustomField>
    <fullName>Make_Name__c</fullName>
    <label>Make Name</label>
    <length>245</length>
    <type>Text</type>
</CustomField>