force-app/main/default/objects/Service_Request__c/fields/Vehicle_Manufacturer_Name__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Manufacturer_Name__c</fullName>
    <label>Vehicle Manufacturer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>