force-app/main/default/objects/Service_Request__c/fields/Vehicle_Types__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Types__c</fullName>
    <label>Vehicle Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Multipurpose Passenger Vehicle (MPV)</fullName>
            </value>
            <value>
                <fullName>Passenger Car</fullName>
            </value>
            <value>
                <fullName>Truck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>